feat: update api get score lesson
