# internal/models/lessons.go
@@ -2,6 +2,7 @@ package models
 
 import (
 	"github.com/gin-gonic/gin"
+	"github.com/uptrace/bun"
 	"time"
 )
 
@@ -27,7 +28,8 @@ type Lesson struct {
 	Type          LessonType     `json:"type"`
 	PracticeItems []PracticeItem `json:"practice_items"`
 
-	CreatedAt time.Time `json:"created_at"`
+	CreatedAt   time.Time     `json:"created_at"`
+	UserLessons []*UserLesson `json:"user_lessons" bun:"rel:has-many,join:id=lesson_id"`
 }
 type Lessons []*Lesson
 
@@ -39,6 +41,8 @@ func (l *Lessons) GetAllByUserId(c *gin.Context, t, ipa, uId string) (int, error
 	if ipa != "" {
 		q.Where("ipa = ?", ipa)
 	}
-	q.Join("LEFT JOIN user_lessons AS ul ON lesson.id = ul.lesson_id AND ul.user_id = ?", uId)
+	q.Relation("UserLessons", func(sq *bun.SelectQuery) *bun.SelectQuery {
+		return sq.Where("user_id = ?", uId)
+	})
 	return ApplyPagination(q.Order("ipa ASC"), c).ScanAndCount(c.Request.Context())
 }
