# services/api/handlers/user_lessons.go
@@ -11,7 +11,7 @@ import (
 // @Tags		users
 // @Accept 		json
 // @Param		user_id path string true "User ID"
-// @Param		story body models.UserLesson true "Lesson"
+// @Param		lesson body models.UserLesson true "Lesson"
 // @Success 	200 {object} models.UserLesson
 // @Failure 	400 {object} models.ValidationError "Bad Request"
 // @Failure     500 {object} models.InternalError	"Internal Server Error"
@@ -31,6 +31,31 @@ func CreateUserLesson(c *gin.Context) *gin.Error {
 		return DatabaseError(err, "error creating user lesson", c)
 	}
 
+	c.JSON(http.StatusOK, u)
+	return nil
+}
+
+// GetUserLessons godoc
+// @Summary		get all score lesson
+// @Tags		users
+// @Accept 		json
+// @Param		user_id path string true "User ID"
+// @Param       ipa    		query     string  false  "ipa"
+// @Success 	200 {object} models.UserLesson
+// @Failure 	400 {object} models.ValidationError "Bad Request"
+// @Failure     500 {object} models.InternalError	"Internal Server Error"
+// @Router		/users/{user_id}/lessons [get]
+// @Security 	Bearer
+func GetUserLessons(c *gin.Context) *gin.Error {
+	u := &models.UserLessons{}
+	uId := GetUUIDFromPath("user_id", c)
+	if uId == "" {
+		return BadParameterError(BadRequestParameter, "user_id", c)
+	}
+	ipa := c.DefaultQuery("ipa", "")
+	if err := u.GetByUserId(c, uId, ipa); err != nil {
+		return DatabaseError(err, "error getting user lessons", c)
+	}
 	c.JSON(http.StatusOK, u)
 	return nil
 }
